@@ -128,9 +128,24 @@ public class RecommendationConstants {
                 RecommendationNotificationMsgConstant.PERFORMANCE_RECOMMENDATIONS_AVAILABLE,
                 RecommendationNotificationTypes.INFO
         ),
+        INFO_MODEL_RECOMMENDATIONS_AVAILABLE(
+                RecommendationConstants.NotificationCodes.INFO_MODEL_RECOMMENDATIONS_AVAILABLE,
+                RecommendationConstants.RecommendationNotificationMsgConstant.MODEL_RECOMMENDATIONS_AVAILABLE,
+                RecommendationConstants.RecommendationNotificationTypes.INFO
+        ),
+        INFO_RUNTIMES_RECOMMENDATIONS_AVAILABLE(
+                NotificationCodes.INFO_RUNTIMES_RECOMMENDATIONS_AVAILABLE,
+                RecommendationNotificationMsgConstant.RUNTIMES_RECOMMENDATIONS_AVAILABLE,
+                RecommendationConstants.RecommendationNotificationTypes.INFO
+        ),
         INFO_NOT_ENOUGH_DATA(
                 RecommendationConstants.NotificationCodes.INFO_NOT_ENOUGH_DATA,
                 RecommendationConstants.RecommendationNotificationMsgConstant.NOT_ENOUGH_DATA,
+                RecommendationConstants.RecommendationNotificationTypes.INFO
+        ),
+        INFO_ACCELERATOR_RECOMMENDATIONS_AVAILABLE(
+                NotificationCodes.INFO_ACCELERATOR_RECOMMENDATIONS_AVAILABLE,
+                RecommendationConstants.RecommendationNotificationMsgConstant.ACCELERATOR_RECOMMENDATIONS_AVAILABLE,
                 RecommendationConstants.RecommendationNotificationTypes.INFO
         ),
         ERROR_AMOUNT_MISSING_IN_CPU_SECTION(
@@ -238,6 +253,11 @@ public class RecommendationConstants {
                 RecommendationConstants.RecommendationNotificationMsgConstant.MEMORY_LIMITS_OPTIMISED,
                 RecommendationConstants.RecommendationNotificationTypes.NOTICE
         ),
+        NOTICE_ACCELERATOR_NOT_SUPPORTED(
+                NotificationCodes.NOTICE_ACCELERATOR_NOT_SUPPORTED,
+                RecommendationConstants.RecommendationNotificationMsgConstant.ACCELERATOR_NOT_SUPPORTED,
+                RecommendationConstants.RecommendationNotificationTypes.NOTICE
+        ),
         CRITICAL_CPU_REQUEST_NOT_SET(
                 RecommendationConstants.NotificationCodes.CRITICAL_CPU_REQUEST_NOT_SET,
                 RecommendationConstants.RecommendationNotificationMsgConstant.CPU_REQUEST_NOT_SET,
@@ -301,6 +321,7 @@ public class RecommendationConstants {
         //          SubSystem - Network     125000 - 125999 (10% of availability)
         //          SubSystem - Disk        126000 - 126999 (10% of availability)
         //          SubSystem - Power       127000 - 127999 (10% of availability)
+        //          SubSystem - Accelerator 128000 - 128999 (10% of availability)
         public static final int SECTION_INFO_END = 199999;
         public static final int SECTION_INFO_SUBSECTION_GENERAL_INFO_START = 110000;
         public static final int SECTION_INFO_SUBSECTION_GENERAL_INFO_END = 119999;
@@ -318,6 +339,9 @@ public class RecommendationConstants {
         public static final int INFO_LONG_TERM_RECOMMENDATIONS_AVAILABLE = 111103; // TODO: need to discuss the code;
         public static final int INFO_COST_RECOMMENDATIONS_AVAILABLE = 112101;
         public static final int INFO_PERFORMANCE_RECOMMENDATIONS_AVAILABLE = 112102;
+        public static final int INFO_MODEL_RECOMMENDATIONS_AVAILABLE = 112103;
+        public static final int INFO_RUNTIMES_RECOMMENDATIONS_AVAILABLE = 112104;
+
         public static final int COST_ENGINE_END = 112199;
         public static final int SECTION_INFO_SUBSECTION_GENERAL_INFO_SUBSYSTEM_GENERAL_END = 112999;
         // Subsystem subsection: Profile Based Engine
@@ -339,6 +363,9 @@ public class RecommendationConstants {
         public static final int SECTION_INFO_SUBSECTION_DATA_SUBSYSTEM_DISK_END = 126999;
         public static final int SECTION_INFO_SUBSECTION_DATA_SUBSYSTEM_POWER_START = 127000;
         public static final int SECTION_INFO_SUBSECTION_DATA_SUBSYSTEM_POWER_END = 127999;
+        public static final int SECTION_INFO_SUBSECTION_DATA_SUBSYSTEM_ACCELERATOR_START = 128000;
+        public static final int INFO_ACCELERATOR_RECOMMENDATIONS_AVAILABLE = 128001;
+        public static final int SECTION_INFO_SUBSECTION_DATA_SUBSYSTEM_ACCELERATOR_END = 128999;
         public static final int SECTION_ERROR_START = 200000;
 
         // Section - Error:                 200000 - 299999
@@ -428,6 +455,9 @@ public class RecommendationConstants {
         public static final int SECTION_NOTICE_SUBSECTION_DATA_SUBSYSTEM_DISK_END = 326999;
         public static final int SECTION_NOTICE_SUBSECTION_DATA_SUBSYSTEM_POWER_START = 327000;
         public static final int SECTION_NOTICE_SUBSECTION_DATA_SUBSYSTEM_POWER_END = 327999;
+        public static final int SECTION_NOTICE_SUBSECTION_DATA_SUBSYSTEM_ACCELERATOR_START = 328000;
+        public static final int NOTICE_ACCELERATOR_NOT_SUPPORTED = 328001;
+        public static final int SECTION_NOTICE_SUBSECTION_DATA_SUBSYSTEM_ACCELERATOR_END = 328999;
         public static final int SECTION_WARNING_START = 400000;
 
         // Section - Warning:               400000 - 499999
@@ -612,6 +642,16 @@ public class RecommendationConstants {
                     CRITICAL_MEMORY_LIMIT_NOT_SET,
                     Arrays.asList(CODES_CONTRADICT_MEMORY_LIMIT_NOT_SET)
             );
+
+            // Contradicting Codes for ACCELERATOR_NOT_SUPPORTED
+            Integer[] CODES_CONTRADICT_ACCELERATOR_NOT_SUPPORTED = {
+                    INFO_ACCELERATOR_RECOMMENDATIONS_AVAILABLE
+            };
+
+            CONTRADICTING_MAP.put(
+                    NOTICE_ACCELERATOR_NOT_SUPPORTED,
+                    Arrays.asList(CODES_CONTRADICT_ACCELERATOR_NOT_SUPPORTED)
+            );
         }
 
         private NotificationCodes() {
@@ -641,6 +681,8 @@ public class RecommendationConstants {
         public static final String NOT_ENOUGH_DATA = "There is not enough data available to generate a recommendation.";
         public static final String COST_RECOMMENDATIONS_AVAILABLE = "Cost Recommendations Available";
         public static final String PERFORMANCE_RECOMMENDATIONS_AVAILABLE = "Performance Recommendations Available";
+        public static final String MODEL_RECOMMENDATIONS_AVAILABLE = "Model Recommendations Available";
+        public static final String RUNTIMES_RECOMMENDATIONS_AVAILABLE = "Runtimes Recommendations Available";
         public static final String RECOMMENDATIONS_AVAILABLE = "Recommendations Are Available";
         public static final String SHORT_TERM_RECOMMENDATIONS_AVAILABLE = "Short Term Recommendations Available";
         public static final String MEDIUM_TERM_RECOMMENDATIONS_AVAILABLE = "Medium Term Recommendations Available";
@@ -671,6 +713,8 @@ public class RecommendationConstants {
         public static final String MEMORY_REQUESTS_OPTIMISED = "Workload is optimised wrt MEMORY REQUESTS, no changes needed";
         public static final String MEMORY_LIMITS_OPTIMISED = "Workload is optimised wrt MEMORY LIMITS, no changes needed";
         public static final String ADDING_RECOMMENDATIONS_TO_DB_FAILED = "Failed to add recommendations to the DB ";
+        public static final String ACCELERATOR_RECOMMENDATIONS_AVAILABLE = "Accelerator Recommendations are available";
+        public static final String ACCELERATOR_NOT_SUPPORTED = "Accelerator is not supported by kruize";
 
         private RecommendationNotificationMsgConstant() {
 
@@ -740,6 +784,55 @@ public class RecommendationConstants {
             public static final Integer FIFTY_PERCENTILE = 50;
             public static final Integer COST_ACCELERATOR_PERCENTILE = 60;
             public static final Integer PERFORMANCE_ACCELERATOR_PERCENTILE = 98;
+        }
+
+        public static class RuntimeConstants {
+            public static final Double DEFAULT_MAX_RAM_PERCENTAGE_VALUE = 80.0;
+            public static final Double MAX_RAM_PERCENTAGE_50 = 50.0;
+            public static final String GPU = "gpu";
+
+            public static final double MEMORY_THRESHOLD_G1GC = 4096.0;
+            public static final int CPU_CORES_THRESHOLD_SERIAL = 1;
+            public static final int CPU_CORES_THRESHOLD_PARALLEL = 2;
+            public static final double RAM_PERCENTAGE_THRESHOLD_BELOW_ONE_CPU_CORE = 10.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_ONE_CPU_CORE = 5.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_256MB = 256.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_512MB = 512.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_4096MB = 4096.0;
+            public static final double RAM_PERCENTAGE_THRESHOLD_8192MB = 8192.0;
+
+
+            public static final double MEMORY_THRESHOLD_BALANCED_GC = 4096.0;
+            public static final int THREADS_PER_CORE = 1;
+            public static final int MIN_CORE_THREADS = 1;
+            public static final int MAX_CORE_THREADS = 100;
+
+            // GC Policy
+            public static final String GC_BALANCED = "-Xgcpolicy:balanced";
+            public static final String GC_GENCON = "-Xgcpolicy:gencon";
+            public static final String GC_SERIAL = "-XX:+UseSerialGC";
+            public static final String GC_PARALLEL = "-XX:+UseParallelGC";
+            public static final String GC_ZGC = "-XX:+UseZGC";
+            public static final String GC_SHENANDOAH = "-XX:+UseShenandoahGC";
+            public static final String GC_G1GC = "-XX:+UseG1GC";
+
+            // JDK version thresholds
+            public static final int JDK_VERSION_SHENANDOAH = 11;
+            public static final int JDK_VERSION_ZGC = 17;
+            public static final int JDK_VERSION_SERVER_FLAG_THRESHOLD = 8;
+        }
+
+        public static final class TunablesConstants {
+            private TunablesConstants() {}
+
+            // Container tunables
+            public static final String MEMORY_LIMIT = "memoryLimit";
+            public static final String CPU_LIMIT =  "cpuLimit";
+            // Hotspot tunables
+            public static final String MAX_RAM_PERC = "MaxRAMPercentage";
+            public static final String GC_POLICY = "GCPolicy";
+            // Quarkus tunables
+            public static final String QUARKUS_THREAD_POOL_CORE_THREADS = "quarkus.thread-pool.core-threads";
         }
     }
 }
